--- a/Dreisatz/css/style.css
+++ b/Dreisatz/css/style.css
@@ -9,20 +9,45 @@ body{
     margin-top: 50px;
     border: 2px solid rgba(214, 90, 42, 0.534);
     display: flex; 
+    flex-direction: column;
 }
 
-.card{
-    border: 2px solid rgba(223, 84, 84, 0.596);
-    padding: 20px;
+.titlebox {
+    /*border: 2px solid rgba(223, 84, 84, 0.596);*/
+    /*padding: 20px;*/
     margin: 20px;
     flex-grow: 1;
     flex-basis: 0;<h2>Das ist ein ganz langer Titel</h2>
-
-
+    position: relative;
 }
+  
+.titlebox .point{
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+    background-color: rgb(99, 95, 160);
+    top: 90px;
+    left: 20px;
+}
+
+
 .background-image{
     height: 150px;
     background-size: cover;
     background-position: 50% 50%;
 
 }
+
+
+@media screen and (min-width: 400px) {
+    .wrapper {
+        flex-direction: row;
+        flex-wrap: wrap;
+
+
+    }
+    .titlebox{
+        flex-basis: 250px;
+    }
+  }
